Respect GTK3 gtk-titlebar-middle-click setting

When using GTK2, Chromium respects the metacity setting that determines
what to do when the title bar is middle clicked.

There is a similar GTK3 setting for client-side decorated windows,
gtk-titlebar-middle-click, which was ignored by Chromium when using GTK3.
This change makes it respect the GTK3 setting.

Bug: 777821
Change-Id: I4a1cb0af4f7ec4e74e8c9de789f52ea92b1be171
Reviewed-on: https://chromium-review.googlesource.com/743624
Reviewed-by: Elliot Glaysher <erg@chromium.org>
Reviewed-by: Thomas Anderson <thomasanderson@chromium.org>
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512559}
Former-commit-id: 3ed8d96195d9c85940b38681f6e356aac9e0134e